# huffman-compressor

./: .clangd  .nvimrc  ARCHITECTURE.md  CARDS.md  CMakeLists.txt  FUNCTIONALITIES.md  Makefile  README.md  SCRUM.md  TESTS.md  debug_heap.c  debug_heapify.c  demo_tests.sh
include/: compress.h  huffman.h  io_tool.h  priority_queue.h
src/: compress.c  huffman.c  io_tool.c  main.c  priority_queue.c
test/: beta
tests/: README.md  TEST_SUMMARY.md  test_compress.c  test_framework.c  test_framework.h  test_huffman.c  test_integration.c  test_io_tool.c  test_priority_queue.c  test_runner.c
